--- a/src/main/resources/templates/admin/System/SpringRole/Index.html
+++ b/src/main/resources/templates/admin/System/SpringRole/Index.html
@@ -6,9 +6,8 @@
 			<div id='p' class='easyui-panel' title='查询' style='padding: 10px'>
 				<form id='serachForm' method='post'>
 					<div id='toolbar'>
-						<input class='easyui-textbox' name='keyWork' label='关键字:' style='width: 300px' /> <input class='easyui-datebox'
-						 name='startDate' label='开始日期:' style='width: 300px' /> <input class='easyui-datebox' name='endDate' label='结束日期:'
-						 style='width: 300px' />
+						<input class='easyui-textbox' name='title' label='编码:' style='width: 300px' />
+						<input class='easyui-textbox' name='description' label='说明:' style='width: 300px' />
 					</div>
 				</form>
 			</div>
