--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -3,6 +3,9 @@
 	<head th:replace="common/header :: head"></head>
 	<body class="easyui-layout" style="text-align: left">
 		<div data-options="region:'north'" style="height: 50px">
+			<div style="width:100px;float:left;line-height: 50px;">
+				<span style="font-weight: bold;font-family: 'arial black';font-size: 24px;">SpringSongs</span>
+			</div>
 			<div style="width:100px;float:right;line-height: 50px;">
 				<a href="/Logout">注销</a>
 			</div>
