--- a/src/main/resources/templates/admin/System/SpringResource/Index.html
+++ b/src/main/resources/templates/admin/System/SpringResource/Index.html
@@ -39,7 +39,7 @@
 						<input class='easyui-textbox' name='vueIcon' id='vueIcon' style='width: 100%' data-options="label:'Icon:',required:false">
 					</div>
 					<div style='margin-bottom: 20px'>
-						<input class='easyui-textbox' name='vueUrl' id='vueUrl' style='width: 100%' data-options="label:'链接:',required:false">
+						<input class='easyui-textbox' name='vueUrl' id='vueUrl' style='width: 100%' data-options="label:'vue链接:',required:false">
 					</div>
 					<div style='margin-bottom: 20px'>
 						<input class='easyui-textbox' name='angularIcon' id='angularIcon' style='width: 100%' data-options="label:'Icon:',required:true">
@@ -104,7 +104,7 @@
 						 readonly="readonly">
 					</div>
 					<div style='margin-bottom: 20px'>
-						<input class='easyui-textbox' name='vueUrl' id='vueUrl1' style='width: 100%' data-options="label:'链接:',required:true"
+						<input class='easyui-textbox' name='vueUrl' id='vueUrl1' style='width: 100%' data-options="label:'vue链接:',required:true"
 						 readonly="readonly">
 					</div>
 					<div style='margin-bottom: 20px'>
