调整查询字段

--- a/src/main/resources/templates/admin/Job/SpringJobHistory/Index.html
+++ b/src/main/resources/templates/admin/Job/SpringJobHistory/Index.html
@@ -6,9 +6,7 @@
 			<div id='p' class='easyui-panel' title='查询' style='padding: 10px'>
 				<form id='searchForm' method='post'>
 					<div id='toolbar'>
-						<input class='easyui-textbox' name='simpleClassName' label='任务名称:' style='width: 300px' /> <input class='easyui-datebox'
-						 name='startDate' label='开始日期:' style='width: 300px' /> <input class='easyui-datebox' name='endDate' label='结束日期:'
-						 style='width: 300px' />
+						<input class='easyui-textbox' name='simpleClassName' label='任务名称:' style='width: 300px' /> 
 					</div>
 				</form>
 			</div>
